--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,7 +8,7 @@
 #greeting-card-cutout {
     width: 100%;
     height: 100%;
-    background: url('/hackmentors/static/img/hackpaddy-2.png');
+    background: url('/static/img/hackpaddy-2.png');
     background-position: top center;
     background-size: cover;
     z-index: 2;
@@ -34,4 +34,8 @@
 
 #clearbutton {
     display:none;
+}
+
+.snap-file {
+    display: none;
 }
