add initial style + flip card animation

--- a/snappaddy/templates/base.html
+++ b/snappaddy/templates/base.html
@@ -15,10 +15,22 @@
 
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
+            <div class="row headline">
+                <div class="col-4 sub-headline">
+                    <span>SnapPaddy</span>
+                </div>
+                <div class="col-4 sub-headline">
+
+                </div>
+                <div class="col-4 sub-headline">
+
+                </div>
+            </div>
             <div class="row">
-                <div class="col">
+                <div class="col-12">
                     <div class="card mt-3" id="greeting-card">
+                        <div id="greeting-card-cover"></div>
                         <div id="greeting-card-cutout"></div>
                         <div class="camera" id="greeting-card-camera">
                             <video id="video" autoplay="true">Video stream not available.</video>
