--- a/snappaddy/templates/paddy_snap.html
+++ b/snappaddy/templates/paddy_snap.html
@@ -39,12 +39,12 @@
                 {% csrf_token %}
                 <input type="hidden" name="cutout" id="input-cutout">
                 <input type="hidden" name="snap-file" id="input-snap-file">
-                <button id="snapbutton" class="btn btn-success">
-                    Create Paddy Snap!
+                <button id="snapbutton" class="btn btn-warning">
+                    <i class="fas fa-palette"></i>Show Card
                 </button>
             </form>
 
-            <button id="clearbutton" class="btn btn-primary">
+            <button id="clearbutton" class="btn btn-danger">
                 <i class="fas fa-redo"></i><span class="pl-3">Re-take photo</span>
             </button>
 
