--- a/snappaddy/templates/base.html
+++ b/snappaddy/templates/base.html
@@ -18,7 +18,7 @@
         <div class="container-fluid">
             <div class="row headline">
                 <div class="col-4 sub-headline">
-                    <span>SnapPaddy</span>
+                    <h2>Paddy Snap</h2>
                 </div>
                 <div class="col-4 sub-headline">
 
@@ -43,10 +43,10 @@
 
             <div class="row">
                 <div class="col text-center">
-                    <button id="startbutton" class="btn btn-primary">
+                    <button id="startbutton" class="btn btn-primary btn-lg my-3">
                         <i class="fas fa-camera-retro"></i><span class="pl-3">Take photo</span>
                     </button>
-                    <button id="clearbutton" class="btn btn-primary">
+                    <button id="clearbutton" class="btn btn-primary btn-lg my-3">
                         <i class="fas fa-redo"></i><span class="pl-3">Re-take photo</span>
                     </button>
 
@@ -64,16 +64,16 @@
         </div>
         
         <script>
-             var width = 320;    // We will scale the photo width to this
-            var height = 0;     // This will be computed based on the input stream
+            let width = 320;    // We will scale the photo width to this
+            let height = 0;     // This will be computed based on the input stream
 
-            var streaming = false;
+            let streaming = false;
 
-            var video = null;
-            var canvas = null;
-            var photo = null;
-            var startbutton = null;
-            var clearbutton = null;
+            let video = null;
+            let canvas = null;
+            let photo = null;
+            let startbutton = null;
+            let clearbutton = null;
 
             startup();
 
@@ -121,21 +121,21 @@
             }
 
             function clearphoto() {
-                var context = canvas.getContext('2d');
+                let context = canvas.getContext('2d');
                 context.fillStyle = "#AAA";
                 context.fillRect(0, 0, canvas.width, canvas.height);
 
-                var data = canvas.toDataURL('image/png');
+                let data = canvas.toDataURL('image/png');
                 photo.setAttribute('src', data);
 
                 toggleReset();
             }
 
             function takepicture() {
-                var context = canvas.getContext('2d');
+                let context = canvas.getContext('2d');
                 context.drawImage(video, 0, 0, video.videoWidth, video.videoHeight);
 
-                var data = canvas.toDataURL('image/png');
+                let data = canvas.toDataURL('image/png');
                 photo.setAttribute('src', data);
                 
                 let inputCutout = document.getElementById('input-cutout');
