remove redundant html + scripts

--- a/snappaddy/templates/base.html
+++ b/snappaddy/templates/base.html
@@ -15,154 +15,11 @@
 
     </head>
     <body>
+        
         <div class="container-fluid">
-            <div class="row headline">
-                <div class="col-4 sub-headline">
-                    <h2>Paddy Snap</h2>
-                </div>
-                <div class="col-4 sub-headline">
-
-                </div>
-                <div class="col-4 sub-headline">
-
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="card mt-3" id="greeting-card">
-                        <div id="greeting-card-cover"></div>
-                        <div id="greeting-card-cutout"></div>
-                        <div class="camera" id="greeting-card-camera">
-                            <video id="video" autoplay="true">Video stream not available.</video>
-                        </div>
-                        <canvas id="greeting-card-canvas"></canvas>
-                        <img id="greeting-card-image">
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col text-center">
-                    <button id="startbutton" class="btn btn-primary btn-lg my-3">
-                        <i class="fas fa-camera-retro"></i><span class="pl-3">Take photo</span>
-                    </button>
-                    <button id="clearbutton" class="btn btn-primary btn-lg my-3">
-                        <i class="fas fa-redo"></i><span class="pl-3">Re-take photo</span>
-                    </button>
-
-                    <form method="POST" action="save/" id="snapForm">
-                        {% csrf_token %}
-                        <input type="hidden" name="cutout" id="input-cutout">
-                        <input type="hidden" name="snap-file" id="input-snap-file">
-                        <button id="snapbutton" class="btn btn-success">
-                            Create Paddy Snap!
-                        </button>
-                    </form>
-
-                </div>
-            </div>
+            {% block content %}
+            {% endblock %}
         </div>
         
-        <script>
-            let width = 320;    // We will scale the photo width to this
-            let height = 0;     // This will be computed based on the input stream
-
-            let streaming = false;
-
-            let video = null;
-            let canvas = null;
-            let photo = null;
-            let startbutton = null;
-            let clearbutton = null;
-
-            startup();
-
-            function startup() {
-                video = document.getElementById('video');
-                canvas = document.getElementById('greeting-card-canvas');
-                photo = document.getElementById('greeting-card-image');
-                startbutton = document.getElementById('startbutton');
-                clearbutton = document.getElementById('clearbutton');
-
-                if (navigator.mediaDevices.getUserMedia) {
-                    navigator.mediaDevices.getUserMedia({ video: true, audio: false })
-                    .then(function(stream) {
-                        console.log("hey")
-                        video.srcObject = stream;
-                        video.play();
-                    })
-                    .catch(function(err) {
-                        console.log("An error occurred: " + err);
-                    });
-                }
-
-                video.addEventListener('canplay', function(ev){
-                    if (!streaming) {
-                        height = video.videoHeight / (video.videoWidth/width);
-                    
-                        video.setAttribute('width', '100%');
-                        video.setAttribute('height', '100%');
-                        console.log(`Height x Width: ${video.videoWidth} x ${video.videoHeight}`)
-                        canvas.setAttribute('width', video.videoWidth);
-                        canvas.setAttribute('height', video.videoHeight);
-                        streaming = true;
-                    }
-                }, false);
-
-                startbutton.addEventListener('click', function(ev){
-                    takepicture();
-                    ev.preventDefault();
-                }, false);
-
-                clearbutton.addEventListener('click', function(ev){
-                    clearphoto();
-                    ev.preventDefault();
-                }, false);
-            }
-
-            function clearphoto() {
-                let context = canvas.getContext('2d');
-                context.fillStyle = "#AAA";
-                context.fillRect(0, 0, canvas.width, canvas.height);
-
-                let data = canvas.toDataURL('image/png');
-                photo.setAttribute('src', data);
-
-                toggleReset();
-            }
-
-            function takepicture() {
-                let context = canvas.getContext('2d');
-                context.drawImage(video, 0, 0, video.videoWidth, video.videoHeight);
-
-                let data = canvas.toDataURL('image/png');
-                photo.setAttribute('src', data);
-                
-                let inputCutout = document.getElementById('input-cutout');
-                let inputSnapFile = document.getElementById('input-snap-file');
-                let greetingCardCutout = document.getElementById('greeting-card-cutout');
-                inputSnapFile.value = data;
-                let backgroundImgUrl = window.getComputedStyle(greetingCardCutout).backgroundImage;
-                let background = backgroundImgUrl.replace('url("', '').replace('")', '');
-                background = background.split('/')
-                background.splice(0, 3)
-                let bImge = '/' + background.join('/')
-                console.log(bImge)
-                inputCutout.value = bImge;
-
-                toggleReset();
-            }
-
-            function toggleReset(){
-                $(video).toggle();
-                $(photo).toggle();
-                $(startbutton).toggle()
-                $(clearbutton).toggle()
-            }
-
-            $('#snapForm').submit(function(){
-
-            })
-        </script>
     </body>
 </html>
