--- a/snappaddy/templates/paddy_snap.html
+++ b/snappaddy/templates/paddy_snap.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 
+<img src="{% static 'img/corner-tl.png' %}" alt="shamrock corner frame" class="corner-frame">
+
 <div class="row headline">
     <div class="col-4 sub-headline">
         <span>SnapPaddy</span>
