--- a/snappaddy/templates/show_snap.html
+++ b/snappaddy/templates/show_snap.html
@@ -2,6 +2,9 @@
 {% load static %}
 
 {% block content %}
+
+<img src="{% static 'img/corner-tl.png' %}" alt="shamrock corner frame" class="corner-frame">
+
 <div class="row headline">
     <div class="col-4 sub-headline">
         <span>SnapPaddy</span>
