renamed css variables

--- a/snappaddy/templates/show_snap.html
+++ b/snappaddy/templates/show_snap.html
@@ -10,9 +10,7 @@
                 <img id="greeting-card-image" class="show" src="{{snap.base64image}}">
             </div>
             <div id="greeting-card-text" class="greeting-card">
-                <h1>
-                    Happy St. Patrick's Day 2021!
-                </h1>
+                   <span class="dark-text">Happy St. Patrick's Day 2021!</span>
             </div>
         </div>
     </div>
