--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,10 +10,10 @@
 
 :root 
 {
-    --p-background: rgb(2, 138, 25);
-    --p-borders: rgb(250, 235, 215);
-    --p-shadows: rgba(0, 0, 0, .25);
-    --off-white: #fafafa;
+    --light-green: rgb(2, 138, 25);
+    --off-white: rgb(250, 235, 215);
+    --light-shadow: rgba(0, 0, 0, .25);
+    --dark-text: rgb(8, 8, 8);
 }
 
 *
@@ -49,7 +49,7 @@ body
 {
     top: 0;
     left: 0;
-    background: var(--p-background);
+    background: var(--light-green);
     position: fixed;
     min-height: 100vh;
     min-width: 100vw;
@@ -72,12 +72,17 @@ h1, h2 {
     color: var(--off-white) ;
 }
 
+.dark-text
+{
+    color: var(--dark-text);
+}
+
 #intro-animation h1
 {
     font-size: 4rem;
     clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
-    border-top: 2px solid var(--p-borders);
-    border-bottom: 2px solid var(--p-borders);
+    border-top: 2px solid var(--off-white);
+    border-bottom: 2px solid var(--off-white);
     animation: scrollLetters 2.8s forwards;
     animation-delay: 1.15s;
 }
@@ -175,7 +180,7 @@ h1, h2 {
     margin: 0 auto;
     transform-style: preserve-3d;
     transform: perspective(1000px);
-    box-shadow: 10px 20px 40px var(--p-shadows);
+    box-shadow: 10px 20px 40px var(--light-shadow);
     transition: all 1s ease-in-out;
     animation: afterSnapSlide 2.2s;
 }
