add initial back button to show_snap

--- a/snappaddy/templates/show_snap.html
+++ b/snappaddy/templates/show_snap.html
@@ -15,5 +15,14 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-12 mt3">
+        <div class="another-snap">
+            <a href="{% url 'index' %}" class="btn"><button class="dark-text">
+                Another Paddy Snap
+            </button></a>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
