--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,16 @@
     </head>
     <body>
         <div class="container-fluid">
+            <div class="corner-frame top-left">
+                <img src="{% static 'img/corner-tl.png' %}" alt="shamrock corner frame">
+            </div>
+
             {% block content %}
             {% endblock %}
+            
+            <div class="corner-frame bottom-right">
+                <img src="{% static 'img/corner-br.png' %}" alt="shamrock corner frame">
+            </div>
         </div>
         
         {% block js %}
